--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,46 +1,74 @@
-<vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="160dp"
-    android:height="160dp"
-    android:viewportWidth="160"
-    android:viewportHeight="160">
-    <group>
-        <clip-path
-            android:pathData="M54,0L106,0A54,54 0,0 1,160 54L160,106A54,54 0,0 1,106 160L54,160A54,54 0,0 1,0 106L0,54A54,54 0,0 1,54 0z"/>
-        <path
-            android:pathData="M0,0h160v160h-160z"
-            android:fillColor="#ffffff"/>
-        <path
-            android:pathData="M71.83,119.43a39.14,39.05 0,1 0,78.29 0a39.14,39.05 0,1 0,-78.29 0z"
-            android:fillColor="#BFFFE8"/>
-        <path
-            android:pathData="M77.15,119.24a33.63,33.55 0,1 0,67.27 0a33.63,33.55 0,1 0,-67.27 0z"
-            android:fillColor="#9DFFDC"/>
-        <path
-            android:pathData="M82.47,119.43a28.5,28.44 0,1 0,57.01 0a28.5,28.44 0,1 0,-57.01 0z"
-            android:fillColor="#7CFFD0"/>
-        <path
-            android:pathData="M86.27,119.43a24.7,24.64 0,1 0,49.41 0a24.7,24.64 0,1 0,-49.41 0z"
-            android:fillColor="#52FFC1"/>
-        <path
-            android:pathData="M47.13,108.44a15.2,15.17 0,1 0,30.4 0a15.2,15.17 0,1 0,-30.4 0z"
-            android:fillColor="#BDF7C2"/>
-        <path
-            android:pathData="M29.26,91.18a0.95,0.95 0,1 0,1.9 0a0.95,0.95 0,1 0,-1.9 0z"
-            android:fillColor="#414250"/>
-        <path
-            android:pathData="M23.56,91.75a5.7,5.69 0,1 0,11.4 0a5.7,5.69 0,1 0,-11.4 0z"
-            android:fillColor="#BDF7C2"/>
-        <path
-            android:pathData="M30.78,93.65a13.3,13.27 0,1 0,26.6 0a13.3,13.27 0,1 0,-26.6 0z"
-            android:fillColor="#BDF7C2"/>
-        <path
-            android:pathData="M67.84,105.78C13.87,87.96 -18.23,66.49 -24.36,52.83L-3.8,170.62L119.9,150.33C119.9,150.33 121.81,123.6 67.84,105.78Z"
-            android:fillColor="#629180"/>
-        <path
-            android:pathData="M110.97,136.87C110.97,136.87 107.08,124.55 53.78,124.55C17.99,124.55 -11.08,113.81 -12.92,112.8L15.39,156.4L62.52,154.5L110.97,136.87Z"
-            android:fillColor="#AFECFF"/>
-        <path
-            android:pathData="M60.05,135.54C30.21,138.01 7.47,129.49 -17.1,123.92L1.52,173.27L88.17,197.73L173.3,178.77L187.43,99.94C177.92,96.36 157.87,83.06 127.51,103.13C127.51,103.13 89.88,133.08 60.05,135.54Z"
-            android:fillColor="#A8DFCB"/>
-    </group>
+<?xml version="1.0" encoding="utf-8"?>
+<vector
+    android:height="108dp"
+    android:width="108dp"
+    android:viewportHeight="108"
+    android:viewportWidth="108"
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <path android:fillColor="#3DDC84"
+          android:pathData="M0,0h108v108h-108z"/>
+    <path android:fillColor="#00000000" android:pathData="M9,0L9,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,0L19,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M29,0L29,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M39,0L39,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M49,0L49,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M59,0L59,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M69,0L69,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M79,0L79,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M89,0L89,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M99,0L99,108"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,9L108,9"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,19L108,19"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,29L108,29"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,39L108,39"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,49L108,49"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,59L108,59"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,69L108,69"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,79L108,79"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,89L108,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M0,99L108,99"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,29L89,29"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,39L89,39"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,49L89,49"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,59L89,59"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,69L89,69"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M19,79L89,79"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M29,19L29,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M39,19L39,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M49,19L49,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M59,19L59,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M69,19L69,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
+    <path android:fillColor="#00000000" android:pathData="M79,19L79,89"
+          android:strokeColor="#33FFFFFF" android:strokeWidth="0.8"/>
 </vector>
